{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 113,
  "lineage": "405a4a14-1db9-c5bd-71a7-7aee2ac6832e",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:659775407889:vpc/vpc-0bf5f027f17516ab0",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-09da8a841c4972889",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0817164e14939558e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bf5f027f17516ab0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f90774740cb7cc6e",
            "owner_id": "659775407889"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:659775407889:loadbalancer/app/rodrigo-falcao-noteflow-alb/cf9a8241ef426b1a",
            "arn_suffix": "app/rodrigo-falcao-noteflow-alb/cf9a8241ef426b1a",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "rodrigo-falcao-noteflow-alb-400282227.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:659775407889:loadbalancer/app/rodrigo-falcao-noteflow-alb/cf9a8241ef426b1a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "rodrigo-falcao-noteflow-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02b0b34935ceee31e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0440c0b753c0114e6"
              },
              {
                "subnet_id": "subnet-046f484a7ea4a1e8a"
              },
              {
                "subnet_id": "subnet-0686d2ffcad705887"
              },
              {
                "subnet_id": "subnet-06a353ffad07d9bd5"
              },
              {
                "subnet_id": "subnet-07674487ea1b8cc14"
              },
              {
                "subnet_id": "subnet-0fe7c5049af41e81f"
              }
            ],
            "subnets": [
              "subnet-0440c0b753c0114e6",
              "subnet-046f484a7ea4a1e8a",
              "subnet-0686d2ffcad705887",
              "subnet-06a353ffad07d9bd5",
              "subnet-07674487ea1b8cc14",
              "subnet-0fe7c5049af41e81f"
            ],
            "tags": {
              "Name": "rodrigo-falcao-noteflow-alb"
            },
            "tags_all": {
              "Name": "rodrigo-falcao-noteflow-alb",
              "creator": "rodrigo.falcao",
              "please_keep_my_resource": "true",
              "service": "noteflow",
              "team": "technical-support-engineering"
            },
            "vpc_id": "vpc-0bf5f027f17516ab0",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "data.aws_ec2_managed_prefix_list.cloudfront",
            "data.aws_subnets.public",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:659775407889:listener/app/rodrigo-falcao-noteflow-alb/cf9a8241ef426b1a/6a6bb35435aad8bd",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:659775407889:targetgroup/rodrigo-falcao-noteflow-fe/1e283d76055d65d2",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:659775407889:listener/app/rodrigo-falcao-noteflow-alb/cf9a8241ef426b1a/6a6bb35435aad8bd",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:659775407889:loadbalancer/app/rodrigo-falcao-noteflow-alb/cf9a8241ef426b1a",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "creator": "rodrigo.falcao",
              "please_keep_my_resource": "true",
              "service": "noteflow",
              "team": "technical-support-engineering"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.frontend",
            "aws_security_group.alb",
            "data.aws_ec2_managed_prefix_list.cloudfront",
            "data.aws_subnets.public",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:659775407889:targetgroup/rodrigo-falcao-noteflow-be/8dd1c65cb997d0af",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:659775407889:listener-rule/app/rodrigo-falcao-noteflow-alb/cf9a8241ef426b1a/6a6bb35435aad8bd/6c35bb923067e77f",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:659775407889:listener-rule/app/rodrigo-falcao-noteflow-alb/cf9a8241ef426b1a/6a6bb35435aad8bd/6c35bb923067e77f",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:659775407889:listener/app/rodrigo-falcao-noteflow-alb/cf9a8241ef426b1a/6a6bb35435aad8bd",
            "priority": 100,
            "tags": {},
            "tags_all": {
              "creator": "rodrigo.falcao",
              "please_keep_my_resource": "true",
              "service": "noteflow",
              "team": "technical-support-engineering"
            }
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.http",
            "aws_lb_target_group.backend",
            "aws_lb_target_group.frontend",
            "aws_security_group.alb",
            "data.aws_ec2_managed_prefix_list.cloudfront",
            "data.aws_subnets.public",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:659775407889:targetgroup/rodrigo-falcao-noteflow-be/8dd1c65cb997d0af",
            "arn_suffix": "targetgroup/rodrigo-falcao-noteflow-be/8dd1c65cb997d0af",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/api/chords/C",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:659775407889:targetgroup/rodrigo-falcao-noteflow-be/8dd1c65cb997d0af",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:659775407889:loadbalancer/app/rodrigo-falcao-noteflow-alb/cf9a8241ef426b1a"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "rodrigo-falcao-noteflow-be",
            "port": 8081,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "rodrigo-falcao-noteflow-backend"
            },
            "tags_all": {
              "Name": "rodrigo-falcao-noteflow-backend",
              "creator": "rodrigo.falcao",
              "please_keep_my_resource": "true",
              "service": "noteflow",
              "team": "technical-support-engineering"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0bf5f027f17516ab0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:659775407889:targetgroup/rodrigo-falcao-noteflow-fe/1e283d76055d65d2",
            "arn_suffix": "targetgroup/rodrigo-falcao-noteflow-fe/1e283d76055d65d2",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:659775407889:targetgroup/rodrigo-falcao-noteflow-fe/1e283d76055d65d2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:659775407889:loadbalancer/app/rodrigo-falcao-noteflow-alb/cf9a8241ef426b1a"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "rodrigo-falcao-noteflow-fe",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "rodrigo-falcao-noteflow-frontend"
            },
            "tags_all": {
              "Name": "rodrigo-falcao-noteflow-frontend",
              "creator": "rodrigo.falcao",
              "please_keep_my_resource": "true",
              "service": "noteflow",
              "team": "technical-support-engineering"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0bf5f027f17516ab0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:659775407889:security-group/sg-02b0b34935ceee31e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02b0b34935ceee31e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [
                  "pl-3b927c52"
                ],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "rodrigo-falcao-noteflow-alb",
            "name_prefix": "",
            "owner_id": "659775407889",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rodrigo-falcao-noteflow-alb"
            },
            "tags_all": {
              "Name": "rodrigo-falcao-noteflow-alb",
              "creator": "rodrigo.falcao",
              "please_keep_my_resource": "true",
              "service": "noteflow",
              "team": "technical-support-engineering"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bf5f027f17516ab0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ec2_managed_prefix_list.cloudfront",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:659775407889:security-group/sg-0c8f94fb715d359fc",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c8f94fb715d359fc",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02b0b34935ceee31e"
                ],
                "self": false,
                "to_port": 8081
              }
            ],
            "name": "rodrigo-falcao-noteflow-backend",
            "name_prefix": "",
            "owner_id": "659775407889",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rodrigo-falcao-noteflow-backend"
            },
            "tags_all": {
              "Name": "rodrigo-falcao-noteflow-backend",
              "creator": "rodrigo.falcao",
              "please_keep_my_resource": "true",
              "service": "noteflow",
              "team": "technical-support-engineering"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bf5f027f17516ab0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "data.aws_ec2_managed_prefix_list.cloudfront",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:659775407889:security-group/sg-0cbadb041eba712d3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cbadb041eba712d3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02b0b34935ceee31e"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "rodrigo-falcao-noteflow-frontend",
            "name_prefix": "",
            "owner_id": "659775407889",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rodrigo-falcao-noteflow-frontend"
            },
            "tags_all": {
              "Name": "rodrigo-falcao-noteflow-frontend",
              "creator": "rodrigo.falcao",
              "please_keep_my_resource": "true",
              "service": "noteflow",
              "team": "technical-support-engineering"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bf5f027f17516ab0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "data.aws_ec2_managed_prefix_list.cloudfront",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:659775407889:security-group/sg-06afb2351456b1049",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-06afb2351456b1049",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c8f94fb715d359fc"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "rodrigo-falcao-noteflow-rds",
            "name_prefix": "",
            "owner_id": "659775407889",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rodrigo-falcao-noteflow-rds"
            },
            "tags_all": {
              "Name": "rodrigo-falcao-noteflow-rds",
              "creator": "rodrigo.falcao",
              "please_keep_my_resource": "true",
              "service": "noteflow",
              "team": "technical-support-engineering"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bf5f027f17516ab0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.backend",
            "data.aws_ec2_managed_prefix_list.cloudfront",
            "data.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}